--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="MobileOptimized" content="320">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<meta name="description" content="Software Engineer &amp; Photographer">
+<meta name="description" content="Software Engineer">
 
 
 <meta property="og:site_name" content="Dan Quan" />
@@ -20,8 +20,8 @@
 
     <meta property="twitter:card" content="summary">
 
-<meta property="og:description" content="Software Engineer &amp; Photographer">
-<meta property="twitter:description" content="Software Engineer &amp; Photographer">
+<meta property="og:description" content="Software Engineer">
+<meta property="twitter:description" content="Software Engineer">
 
 <title>
 
