--- a/home/index.html
+++ b/home/index.html
@@ -1125,7 +1125,7 @@ div.main .content .markdown pre, div.main .content .markdown pre code {
             <div class="markdown">
                 
     
-    <p>Software Engineer
+    <p>Software Engineer<br />
 San Diego, CA</p>
 
 
