--- a/index.html
+++ b/index.html
@@ -1121,7 +1121,7 @@ div.main .content .markdown pre, div.main .content .markdown pre code {
         <div class="content">
             
                 <div class="markdown">
-                <p>Software Engineer
+                <p>Software Engineer<br />
 San Diego, CA</p>
 
                 </div>
